packages/tree-sitter-holoscript/grammar.js
    source_file: ($) => repeat($._definition),

    _definition: ($) =>
      choice(
        // Core scene formats
        $.composition,
        $.world,
        $.template,
        $.object,
        $.entity,
        $.environment,
        // HSPlus language constructs
        $.module_declaration,
        $.struct_definition,
        $.enum_definition,
        $.interface_definition,
        $.import_statement,
        $.export_statement,
        $.function_declaration,
        // Spatial computing primitives
        $.zone_declaration,
        $.spawn_group,
        $.waypoints_block,
        $.constraint_block,
        $.terrain_block,
        // Domain-specific blocks (structured for AI training)
        $.iot_block,
        $.robotics_block,
        $.dataviz_block,
        $.education_block,
        $.healthcare_block,
        $.music_block,
        $.architecture_block,
        $.web3_block,
        // v6 Universal Semantic Platform (v5.2 — March 2026)
        $.service_block,
        $.contract_block,
        $.data_block,
        $.pipeline_block,
        // Perception & simulation layer (v4.2 — March 2026)
        $.material_block,
        $.particle_block,
        $.post_processing_block,
        $.weather_block,
        $.procedural_block,
        $.lod_block,
        $.navigation_block,
        $.input_block,
        $.audio_source_block,
        $.force_field_block,
        $.articulation_block,
        $.render_hints,
        $.annotation,
        // Built-in test framework
        $.test_block,
        // Codebase absorption (v4.3)
        $.codebase_block,
        // Shared constructs
        $.action,
        $.event_bus,
        $.trait_definition,
        $.timeline,
        $.state_declaration,
        // Cultural norms (v4.6 — emergent agent culture)
        $.norm_block,
        // Linear resource types (v4.4 — compile-time safety)
        $.resource_definition,
        // Extensible: any unknown domain block
        $.custom_block,
        // Additional top-level spatial constructs
        $.spatial_group,
        $.light,
        $.camera
      ),

    // =========================================================================
    // COMPOSITION (Primary .holo format)
    // =========================================================================

    composition: ($) =>
      seq('composition', field('name', $.string), '{', repeat($._composition_content), '}'),

    _composition_content: ($) =>
      choice(
        $.environment,
        $.config_block,
        $.template,
        $.object,
        $.spatial_group,
        $.timeline,
        $.logic,
        $.light,
        $.camera,
        $.action,
        $.state_declaration,
        $.dialog_block,
        $.networked_block,
        // HSPlus features inside compositions
        $.module_declaration,
        $.function_declaration,
        $.zone_declaration,
        $.spawn_group,
        $.waypoints_block,
        $.event_handler,
        // Domain blocks inside compositions
        $.iot_block,
        $.robotics_block,
        $.dataviz_block,
        $.education_block,
        $.healthcare_block,
        $.music_block,
        $.architecture_block,
        $.web3_block,
        // v6 Universal Semantic Platform inside compositions
        $.service_block,
        $.contract_block,
        $.data_block,
        $.pipeline_block,
        // Perception & simulation layer inside compositions
        $.material_block,
        $.particle_block,
        $.post_processing_block,
        $.weather_block,
        $.procedural_block,
        $.lod_block,
        $.navigation_block,
        $.input_block,
        $.audio_source_block,
        $.force_field_block,
        $.articulation_block,
        $.render_hints,
        $.annotation,
        $.test_block,
        $.codebase_block,
        $.norm_block,
        $.custom_block
      ),

    // Environment block
    environment: ($) => seq('environment', '{', repeat(seq($.property, optional(','))), '}'),

    // Config block (zone-level configuration)
    timeline: ($) =>
      seq('timeline', optional(field('name', $.string)), '{', repeat($.timeline_entry), '}'),

    timeline_entry: ($) => seq(field('time', $.number), ':', $.timeline_action),

    timeline_action: ($) => choice($.animate_action, $.emit_action, $.call_action),

    animate_action: ($) =>
      seq(
        'animate',
        field('target', $.identifier),
        '{',
        repeat(seq($.property, optional(','))),
        '}'
      ),

    emit_action: ($) =>
      seq('emit', field('event', $.string), optional(seq('(', sepBy($.argument, ','), ')'))),

    call_action: ($) =>
      seq('call', field('function', $.property_access), '(', sepBy($.argument, ','), ')'),

    // Logic block
    world: ($) =>
      seq(
        'world',
        field('name', $.string),
        optional($.trait_list),
        '{',
        repeat($._world_content),
        '}'
      ),

    _world_content: ($) =>
      choice($.environment, $.template, $.object, $.entity, $.spatial_group, $.action, $.event_bus),

    // =========================================================================
    // TEMPLATE (Reusable object definitions)
    // =========================================================================

    template: ($) =>
      seq(
        optional($.platform_decorator),
        'template',
        field('name', $.string),
        optional($.trait_list),
        '{',
        repeat($._template_content),
        '}'
      ),

    _template_content: ($) =>
      choice(
        $.property,
        $.trait_inline,
        $.trait_with_body,
        $.state_block,
        $.networked_block,
        // Structured physics blocks in templates
        $.physics_block,
        $.collider_block,
        $.rigidbody_block,
        $.force_field_block,
        $.articulation_block,
        $.animation,
        $.event_handler,
        $.action,
        $.decorator_event_handler,
        // Compile-time safety annotations
        $.effects_decorator,
        $.budget_decorator
      ),

    // =========================================================================
    // OBJECT (Instances in scene)
    // =========================================================================

    object: ($) =>
      seq(
        optional($.platform_decorator),
        choice(
          'object',
          'orb',
          'cube',
          'sphere',
          'cylinder',
          'cone',
          'model',
          'npc',
          'portal',
          'audio',
          'spawnpoint',
          'ui_panel',
          'text',
          'gesture',
          'progress',
          'button',
          'text'
        ),
        field('name', $.string),
        optional(seq('using', field('template', $.string))),
        optional($.trait_list),
        optional(seq('{', repeat($._object_content), '}'))
      ),

    _object_content: ($) =>
      choice(
        $.property,
        $.trait_inline,
        $.trait_with_body,
        $.object,
        $.state_block,
        $.networked_block,
        $.physics_block,
        // Structured physics sub-blocks can also appear directly in objects
        $.collider_block,
        $.rigidbody_block,
        $.force_field_block,
        $.articulation_block,
        $.animation,
        $.event_handler,
        $.action,
        $.decorator_event_handler,
        // Compile-time safety annotations
        $.effects_decorator,
        $.budget_decorator
      ),

    // =========================================================================
    // ENTITY (Alternative object syntax)
    // =========================================================================

    entity: ($) =>
      seq(
        'entity',
        field('name', $.string),
        optional($.trait_list),
        '{',
        repeat($._entity_content),
        '}'
      ),

    _entity_content: ($) => choice($.property, $.component, $.state_block, $.event_handler),

    component: ($) =>
      seq(
        'component',
        field('name', $.identifier),
        '{',
        repeat(seq($.property, optional(','))),
        '}'
      ),

    // =========================================================================
    // TRAITS
    // =========================================================================

    trait_list: ($) => prec.right(repeat1($.trait_inline)),

    trait_inline: ($) => seq('@', field('name', $.identifier), optional($.trait_arguments)),

    state_block: ($) => seq('state', '{', repeat(seq($.property, optional(','))), '}'),

    // Named state declaration (top-level or composition-level)
    // e.g. state GameState { started: false, score: 0 }
    networked_block: ($) => seq('networked', '{', repeat($.networked_property), '}'),

    networked_property: ($) =>
      seq(field('name', $.identifier), ':', choice('synced', 'owner_only', 'interpolated')),

    // Structured physics block — supports both flat properties (backward compat)
    // and nested typed sub-blocks: collider, rigidbody, force_field, articulation
    // e.g. physics { collider sphere { radius: 0.5 } rigidbody { mass: 5 } mass: 2 }
    physics_block: ($) =>
      seq(
        'physics',
        optional(':'),
        '{',
        repeat(
          choice(
            $.collider_block,
            $.rigidbody_block,
            $.force_field_block,
            $.articulation_block,
            seq($.property, optional(','))
          )
        ),
        '}'
      ),

    // =========================================================================
    // HSPLUS: MODULES, STRUCTS, ENUMS, INTERFACES
    // =========================================================================

    // Module declaration — module GameState { export let score... }
    material_block: ($) =>
      seq(
        choice(
          'material',
          'pbr_material',
          'unlit_material',
          'shader',
          'toon_material',
          'glass_material',
          'subsurface_material'
        ),
        field('name', choice($.string, $.identifier)),
        optional($.trait_list),
        '{',
        repeat(
          choice(
            seq($.property, optional(',')),
            $.texture_map,
            $.texture_map_block,
            $.shader_pass,
            $.shader_connection
          )
        ),
        '}'
      ),

    // Simple texture map assignment (inline form)
    // e.g. albedo_map: "textures/wood.png"
    texture_map: ($) =>
      seq(
        field(
          'channel',
          choice(
            'albedo_map',
            'normal_map',
            'roughness_map',
            'metallic_map',
            'emission_map',
            'ao_map',
            'height_map',
            'opacity_map',
            'displacement_map',
            'specular_map',
            'clearcoat_map',
            'baseColor_map',
            'emissive_map',
            'transmission_map',
            'sheen_map',
            'anisotropy_map',
            'thickness_map',
            'subsurface_map',
            'iridescence_map'
          )
        ),
        ':',
        field('source', $._expression)
      ),

    // Structured texture map sub-block (detailed form with parameters)
    // e.g. albedo_map { source: "textures/wood.png" tiling: [2, 2] filtering: "trilinear" }
    texture_map_block: ($) =>
      seq(
        field(
          'channel',
          choice(
            'albedo_map',
            'normal_map',
            'roughness_map',
            'metallic_map',
            'emission_map',
            'ao_map',
            'height_map',
            'opacity_map',
            'displacement_map',
            'specular_map',
            'clearcoat_map',
            'baseColor_map',
            'emissive_map',
            'transmission_map',
            'sheen_map',
            'anisotropy_map',
            'thickness_map',
            'subsurface_map',
            'iridescence_map'
          )
        ),
        '{',
        repeat(seq($.property, optional(','))),
        '}'
      ),

    // Shader pass for multi-pass rendering
    // e.g. pass "ForwardBase" { vertex: "shaders/pbr.vert" fragment: "shaders/pbr.frag" }
    shader_pass: ($) =>
      seq(
        'pass',
        optional(field('name', choice($.string, $.identifier))),
        '{',
        repeat(seq($.property, optional(','))),
        '}'
      ),

    shader_connection: ($) =>
      seq(field('output', $.identifier), '->', field('input', $.property_access)),

    // ── P0: Structured Physics ───────────────────────────────────────────────
    // collider sphere { radius: 0.5 is_trigger: false }
    // rigidbody { mass: 5 angular_damping: 0.1 use_gravity: true }
    collider_block: ($) =>
      seq(
        choice('collider', 'trigger'),
        optional(
          field(
            'shape',
            choice('box', 'sphere', 'capsule', 'mesh', 'convex', 'cylinder', 'heightfield')
          )
        ),
        '{',
        repeat(seq($.property, optional(','))),
        '}'
      ),

    rigidbody_block: ($) => seq('rigidbody', '{', repeat(seq($.property, optional(','))), '}'),

    force_field_block: ($) =>
      seq(
        choice(
          'force_field',
          'gravity_zone',
          'wind_zone',
          'buoyancy_zone',
          'magnetic_field',
          'drag_zone'
        ),
        optional(field('name', choice($.string, $.identifier))),
        optional($.trait_list),
        '{',
        repeat(seq($.property, optional(','))),
        '}'
      ),

    articulation_block: ($) =>
      seq(
        'articulation',
        field('name', choice($.string, $.identifier)),
        optional($.trait_list),
        '{',
        repeat(choice($.joint_block, seq($.property, optional(',')))),
        '}'
      ),

    joint_block: ($) =>
      seq(
        choice(
          'joint',
          'hinge',
          'slider',
          'ball_socket',
          'fixed_joint',
          'd6_joint',
          'spring_joint',
          'prismatic'
        ),
        field('name', choice($.string, $.identifier)),
        '{',
        repeat(seq($.property, optional(','))),
        '}'
      ),

    // ── P1: Particle / VFX System ────────────────────────────────────────────
    // particles "CampfireSmoke" @looping { rate: 500 lifetime: [2, 4] }
    particle_block: ($) =>
      seq(
        choice('particles', 'emitter', 'vfx', 'particle_system'),
        field('name', choice($.string, $.identifier)),
        optional($.trait_list),
        '{',
        repeat(choice(seq($.property, optional(',')), $.particle_module)),
        '}'
      ),

    particle_module: ($) =>
      seq(
        choice(
          'emission',
          'lifetime',
          'velocity',
          'force',
          'color_over_life',
          'size_over_life',
          'noise',
          'collision',
          'sub_emitter',
          'shape',
          'renderer',
          'rotation_over_life',
          'trails',
          'texture_sheet',
          'inherit_velocity'
        ),
        '{',
        repeat(seq($.property, optional(','))),
        '}'
      ),

    // ── P1: Post-Processing Pipeline ─────────────────────────────────────────
    // post_processing "Cinematic" { bloom { intensity: 0.8 } depth_of_field { aperture: 2.8 } }
    post_processing_block: ($) =>
      seq(
        choice('post_processing', 'post_fx', 'render_pipeline'),
        optional(field('name', choice($.string, $.identifier))),
        '{',
        repeat($.post_effect),
        '}'
      ),

    weather_block: ($) =>
      seq(
        choice('weather', 'atmosphere', 'sky', 'climate'),
        optional(field('name', choice($.string, $.identifier))),
        optional($.trait_list),
        '{',
        repeat(choice(seq($.property, optional(',')), $.weather_layer)),
        '}'
      ),

    parameter_list: ($) => seq($.parameter, repeat(seq(',', $.parameter))),

    this: ($) => 'this',
