packages/tree-sitter-holoscript/test/corpus/holoscript.txt
================================================================================
Composition
================================================================================

composition "My Scene" {
  environment {
    skybox: "nebula"
    ambient_light: 0.5
  }

  object "Cube" @grabbable @glowing {
    geometry: "cube"
    position: [0, 1, 0]
    color: "#ff0000"
  }
}

--------------------------------------------------------------------------------

(source_file
  (composition
    name: (string)
    (environment
      (property
        key: (identifier)
        value: (string))
      (property
        key: (identifier)
        value: (number)))
    (object
      name: (string)
      (trait_list
        (trait_inline
          name: (identifier))
        (trait_inline
          name: (identifier)))
      (property
        key: (identifier)
        value: (string))
      (property
        key: (identifier)
        value: (array
          (number)
          (number)
          (number)))
      (property
        key: (identifier)
        value: (string)))))

================================================================================
Template with State
================================================================================

template "Enemy" {
  geometry: "humanoid"
  color: "#ff0000"

  state {
    health: 100
    isAlive: true
  }

  onTriggerEnter: {
    this.health -= 10
  }
}

--------------------------------------------------------------------------------

(source_file
  (template
    name: (string)
    (property
      key: (identifier)
      value: (string))
    (property
      key: (identifier)
      value: (string))
    (state_block
      (property
        key: (identifier)
        value: (number))
      (property
        key: (identifier)
        value: (boolean)))
    (event_handler
      event: (event_name)
      (block
        (assignment
          left: (property_access
            property: (identifier))
          right: (number))))))

================================================================================
Object with Physics
================================================================================

object "Ball" @grabbable @throwable {
  geometry: "sphere"
  scale: [0.2, 0.2, 0.2]

  physics: {
    mass: 0.5
    restitution: 0.8
    friction: 0.3
  }

  onGrab: {
    haptic.feedback("medium")
  }
}

--------------------------------------------------------------------------------

(source_file
  (object
    name: (string)
    (trait_list
      (trait_inline
        name: (identifier))
      (trait_inline
        name: (identifier)))
    (property
      key: (identifier)
      value: (string))
    (property
      key: (identifier)
      value: (array
        (number)
        (number)
        (number)))
    (physics_block
      (property
        key: (identifier)
        value: (number))
      (property
        key: (identifier)
        value: (number))
      (property
        key: (identifier)
        value: (number)))
    (event_handler
      event: (event_name)
      (block
        (function_call
          function: (property_access
            object: (identifier)
            property: (identifier))
          (argument
            (string)))))))

================================================================================
Timeline Animation
================================================================================

timeline "intro" {
  0: animate Crystal {
    target_y: 2.0
    duration: 1000
    easing: "easeOut"
  }

  1500: emit "crystalReady"

  2000: call audio.play("chime.wav")
}

--------------------------------------------------------------------------------

(source_file
  (timeline
    name: (string)
    (timeline_entry
      time: (number)
      (timeline_action
        (animate_action
          target: (identifier)
          (property
            key: (identifier)
            value: (number))
          (property
            key: (identifier)
            value: (number))
          (property
            key: (identifier)
            value: (string)))))
    (timeline_entry
      time: (number)
      (timeline_action
        (emit_action
          event: (string))))
    (timeline_entry
      time: (number)
      (timeline_action
        (call_action
          function: (property_access
            object: (identifier)
            property: (identifier))
          (argument
            (string)))))))

================================================================================
Networked Object
================================================================================

object "SharedBall" @grabbable @networked {
  geometry: "sphere"

  networked {
    position: synced
    rotation: synced
    owner: owner_only
  }

  onGrab: {
    network.claim(this)
  }
}

--------------------------------------------------------------------------------

(source_file
  (object
    name: (string)
    (trait_list
      (trait_inline
        name: (identifier))
      (trait_inline
        name: (identifier)))
    (property
      key: (identifier)
      value: (string))
    (networked_block
      (networked_property
        name: (identifier))
      (networked_property
        name: (identifier))
      (networked_property
        name: (identifier)))
    (event_handler
      event: (event_name)
      (block
        (function_call
          function: (property_access
            object: (identifier)
            property: (identifier))
          (argument
            (this)))))))

================================================================================
Action with Parameters
================================================================================

action attack(target, damage) {
  if (target.health > 0) {
    target.health -= damage
    audio.play("hit.wav")
  } else {
    return
  }
}

--------------------------------------------------------------------------------

(source_file
  (action
    name: (identifier)
    (parameter_list
      (parameter
        name: (identifier))
      (parameter
        name: (identifier)))
    (block
      (if_statement
        condition: (binary_expression
          left: (property_access
            object: (identifier)
            property: (identifier))
          right: (number))
        (block
          (assignment
            left: (property_access
              object: (identifier)
              property: (identifier))
            right: (identifier))
          (function_call
            function: (property_access
              object: (identifier)
              property: (identifier))
            (argument
              (string))))
        (block
          (return_statement))))))

================================================================================
Comments
================================================================================

// This is a line comment
composition "Test" {
  /* Block comment
     spanning multiple lines */
  object "Cube" {
    // Property comment
    geometry: "cube"
  }
}

--------------------------------------------------------------------------------

(source_file
  (comment)
  (composition
    name: (string)
    (comment)
    (object
      name: (string)
      (comment)
      (property
        key: (identifier)
        value: (string)))))

================================================================================
World with Entity
================================================================================

world "GameWorld" @persistent {
  entity "Player" @networked {
    position: [0, 0, 0]

    component Transform {
      scale: [1, 1, 1]
    }

    state {
      score: 0
    }
  }
}

--------------------------------------------------------------------------------

(source_file
  (world
    name: (string)
    (trait_list
      (trait_inline
        name: (identifier)))
    (entity
      name: (string)
      (trait_list
        (trait_inline
          name: (identifier)))
      (property
        key: (identifier)
        value: (array
          (number)
          (number)
          (number)))
      (component
        name: (identifier)
        (property
          key: (identifier)
          value: (array
            (number)
            (number)
            (number))))
      (state_block
        (property
          key: (identifier)
          value: (number))))))

================================================================================
PBR Material with Inline Properties
================================================================================

material "SteelPlate" @pbr {
  baseColor: #888888
  roughness: 0.3
  metallic: 1.0
  normal: 1.0
  emissive: #000000
  opacity: 1.0
  IOR: 1.45
}

--------------------------------------------------------------------------------

(source_file
  (material_block
    name: (string)
    (trait_list
      (trait_inline
        name: (identifier)))
    (property
      key: (identifier)
      value: (color))
    (property
      key: (identifier)
      value: (number))
    (property
      key: (identifier)
      value: (number))
    (property
      key: (identifier)
      value: (number))
    (property
      key: (identifier)
      value: (color))
    (property
      key: (identifier)
      value: (number))
    (property
      key: (identifier)
      value: (number))))

================================================================================
PBR Material with Inline Texture Maps
================================================================================

pbr_material "Wood" {
  albedo_map: "textures/wood_albedo.png"
  normal_map: "textures/wood_normal.png"
  roughness_map: "textures/wood_roughness.png"
  roughness: 0.6
  metallic: 0.0
}

--------------------------------------------------------------------------------

(source_file
  (material_block
    name: (string)
    (texture_map
      source: (string))
    (texture_map
      source: (string))
    (texture_map
      source: (string))
    (property
      key: (identifier)
      value: (number))
    (property
      key: (identifier)
      value: (number))))

================================================================================
PBR Material with Texture Map Sub-Blocks
================================================================================

pbr_material "BrickWall" @pbr {
  albedo_map {
    source: "textures/brick_albedo.png"
    tiling: [4, 4]
    filtering: "trilinear"
  }
  normal_map {
    source: "textures/brick_normal.png"
    strength: 1.2
    format: "opengl"
  }
  ao_map {
    source: "textures/brick_ao.png"
    intensity: 0.8
  }
  roughness: 0.85
  metallic: 0.0
}

--------------------------------------------------------------------------------

(source_file
  (material_block
    name: (string)
    (trait_list
      (trait_inline
        name: (identifier)))
    (texture_map_block
      (property
        key: (identifier)
        value: (string))
      (property
        key: (identifier)
        value: (array
          (number)
          (number)))
      (property
        key: (identifier)
        value: (string)))
    (texture_map_block
      (property
        key: (identifier)
        value: (string))
      (property
        key: (identifier)
        value: (number))
      (property
        key: (identifier)
        value: (string)))
    (texture_map_block
      (property
        key: (identifier)
        value: (string))
      (property
        key: (identifier)
        value: (number)))
    (property
      key: (identifier)
      value: (number))
    (property
      key: (identifier)
      value: (number))))

================================================================================
Glass Material with Transparency
================================================================================

glass_material "WindowGlass" @transparent {
  baseColor: #ffffff
  opacity: 0.3
  IOR: 1.52
  transmission: 0.95
  roughness: 0.05
}

--------------------------------------------------------------------------------

(source_file
  (material_block
    name: (string)
    (trait_list
      (trait_inline
        name: (identifier)))
    (property
      key: (identifier)
      value: (color))
    (property
      key: (identifier)
      value: (number))
    (property
      key: (identifier)
      value: (number))
    (property
      key: (identifier)
      value: (number))
    (property
      key: (identifier)
      value: (number))))

================================================================================
Shader with Pass and Connection
================================================================================

shader "CustomPBR" {
  pass "ForwardBase" {
    vertex: "shaders/pbr.vert"
    fragment: "shaders/pbr.frag"
    blend: "alpha"
  }
  roughness: 0.5
  albedoOut -> material.baseColor
}

--------------------------------------------------------------------------------

(source_file
  (material_block
    name: (string)
    (shader_pass
      name: (string)
      (property
        key: (identifier)
        value: (string))
      (property
        key: (identifier)
        value: (string))
      (property
        key: (identifier)
        value: (string)))
    (property
      key: (identifier)
      value: (number))
    (shader_connection
      output: (identifier)
      input: (property_access
        object: (identifier)
        property: (identifier)))))

================================================================================
Material inside Composition
================================================================================

composition "Realistic Scene" {
  material "Floor" @pbr {
    baseColor: #cccccc
    roughness: 0.9
    metallic: 0.0
    normal_map: "textures/floor_normal.png"
  }

  object "FloorPlane" {
    geometry: "plane"
    position: [0, 0, 0]
  }
}

--------------------------------------------------------------------------------

(source_file
  (composition
    name: (string)
    (material_block
      name: (string)
      (trait_list
        (trait_inline
          name: (identifier)))
      (property
        key: (identifier)
        value: (color))
      (property
        key: (identifier)
        value: (number))
      (property
        key: (identifier)
        value: (number))
      (texture_map
        source: (string)))
    (object
      name: (string)
      (property
        key: (identifier)
        value: (string))
      (property
        key: (identifier)
        value: (array
          (number)
          (number)
          (number))))))

================================================================================
Structured Physics Block with Collider and Rigidbody
================================================================================

object "Crate" @grabbable {
  geometry: "cube"

  physics {
    collider box {
      size: [1, 1, 1]
      is_trigger: false
    }

    rigidbody {
      mass: 5
      drag: 0.1
      angular_damping: 0.05
      use_gravity: true
    }

    friction: 0.6
  }
}

--------------------------------------------------------------------------------

(source_file
  (object
    name: (string)
    (trait_list
      (trait_inline
        name: (identifier)))
    (property
      key: (identifier)
      value: (string))
    (physics_block
      (collider_block
        (property
          key: (identifier)
          value: (array
            (number)
            (number)
            (number)))
        (property
          key: (identifier)
          value: (boolean)))
      (rigidbody_block
        (property
          key: (identifier)
          value: (number))
        (property
          key: (identifier)
          value: (number))
        (property
          key: (identifier)
          value: (number))
        (property
          key: (identifier)
          value: (boolean)))
      (property
        key: (identifier)
        value: (number)))))

================================================================================
Collider with Sphere Shape
================================================================================

object "Ball" {
  collider sphere {
    radius: 0.5
    is_trigger: false
  }
}

--------------------------------------------------------------------------------

(source_file
  (object
    name: (string)
    (collider_block
      (property
        key: (identifier)
        value: (number))
      (property
        key: (identifier)
        value: (boolean)))))

================================================================================
Force Field Block
================================================================================

gravity_zone "HeavyZone" @persistent {
  strength: 20
  shape: "sphere"
  radius: 10
}

--------------------------------------------------------------------------------

(source_file
  (force_field_block
    name: (string)
    (trait_list
      (trait_inline
        name: (identifier)))
    (property
      key: (identifier)
      value: (number))
    (property
      key: (identifier)
      value: (string))
    (property
      key: (identifier)
      value: (number))))

================================================================================
Articulation with Joint Sub-Blocks
================================================================================

articulation "RobotArm" {
  solver_iterations: 16

  hinge "Shoulder" {
    axis: [0, 1, 0]
    limits: [-90, 90]
    damping: 0.5
  }

  slider "Elbow" {
    axis: [1, 0, 0]
    limits: [0, 0.5]
  }
}

--------------------------------------------------------------------------------

(source_file
  (articulation_block
    name: (string)
    (property
      key: (identifier)
      value: (number))
    (joint_block
      name: (string)
      (property
        key: (identifier)
        value: (array
          (number)
          (number)
          (number)))
      (property
        key: (identifier)
        value: (array
          (unary_expression
            operand: (number))
          (number)))
      (property
        key: (identifier)
        value: (number)))
    (joint_block
      name: (string)
      (property
        key: (identifier)
        value: (array
          (number)
          (number)
          (number)))
      (property
        key: (identifier)
        value: (array
          (number)
          (number))))))

================================================================================
Physics Block with Force Field Inside
================================================================================

object "MagnetZone" {
  physics {
    collider sphere {
      radius: 5
      is_trigger: true
    }

    force_field "Attractor" {
      strength: -15
      falloff: "inverse_square"
    }
  }
}

--------------------------------------------------------------------------------

(source_file
  (object
    name: (string)
    (physics_block
      (collider_block
        (property
          key: (identifier)
          value: (number))
        (property
          key: (identifier)
          value: (boolean)))
      (force_field_block
        name: (string)
        (property
          key: (identifier)
          value: (unary_expression
            operand: (number)))
        (property
          key: (identifier)
          value: (string))))))

================================================================================
Rigidbody Directly in Object
================================================================================

object "FallingBox" {
  geometry: "cube"

  rigidbody {
    mass: 10
    use_gravity: true
  }
}

--------------------------------------------------------------------------------

(source_file
  (object
    name: (string)
    (property
      key: (identifier)
      value: (string))
    (rigidbody_block
      (property
        key: (identifier)
        value: (number))
      (property
        key: (identifier)
        value: (boolean)))))

================================================================================
Particle System with Modules
================================================================================

particles "CampfireSmoke" @looping {
  rate: 500
  max_particles: 2000
  start_lifetime: [2, 4]
  start_speed: [0.5, 1.5]
  start_size: [0.1, 0.3]
  gravity_modifier: 0.1

  emission {
    rate_over_time: 500
    burst_count: 10
    burst_interval: 0.5
  }

  color_over_life {
    gradient: ["#ff6600", "#888888", "#00000000"]
    mode: "blend"
  }

  size_over_life {
    curve: [1.0, 1.5, 0.0]
    mode: "bezier"
  }

  noise {
    strength: 0.3
    frequency: 2.0
    scroll_speed: 0.1
  }
}

--------------------------------------------------------------------------------

(source_file
  (particle_block
    name: (string)
    (trait_list
      (trait_inline
        name: (identifier)))
    (property
      key: (identifier)
      value: (number))
    (property
      key: (identifier)
      value: (number))
    (property
      key: (identifier)
      value: (array
        (number)
        (number)))
    (property
      key: (identifier)
      value: (array
        (number)
        (number)))
    (property
      key: (identifier)
      value: (array
        (number)
        (number)))
    (property
      key: (identifier)
      value: (number))
    (particle_module
      (property
        key: (identifier)
        value: (number))
      (property
        key: (identifier)
        value: (number))
      (property
        key: (identifier)
        value: (number)))
    (particle_module
      (property
        key: (identifier)
        value: (array
          (string)
          (string)
          (string)))
      (property
        key: (identifier)
        value: (string)))
    (particle_module
      (property
        key: (identifier)
        value: (array
          (number)
          (number)
          (number)))
      (property
        key: (identifier)
        value: (string)))
    (particle_module
      (property
        key: (identifier)
        value: (number))
      (property
        key: (identifier)
        value: (number))
      (property
        key: (identifier)
        value: (number)))))

================================================================================
VFX Emitter (Particle Block Variant)
================================================================================

emitter "Sparks" {
  rate: 100
  start_lifetime: [0.5, 1.0]
  velocity {
    direction: [0, 1, 0]
    speed: 5
    spread: 30
  }
  trails {
    enabled: true
    width: 0.02
    lifetime: 0.3
  }
}

--------------------------------------------------------------------------------

(source_file
  (particle_block
    name: (string)
    (property
      key: (identifier)
      value: (number))
    (property
      key: (identifier)
      value: (array
        (number)
        (number)))
    (particle_module
      (property
        key: (identifier)
        value: (array
          (number)
          (number)
          (number)))
      (property
        key: (identifier)
        value: (number))
      (property
        key: (identifier)
        value: (number)))
    (particle_module
      (property
        key: (identifier)
        value: (boolean))
      (property
        key: (identifier)
        value: (number))
      (property
        key: (identifier)
        value: (number)))))

================================================================================
Post-Processing Pipeline with Effects
================================================================================

post_processing "Cinematic" {
  bloom {
    intensity: 0.8
    threshold: 1.0
    scatter: 0.7
    tint: #ffeecc
  }
  depth_of_field {
    aperture: 2.8
    focal_length: 50
    focus_distance: 10
  }
  color_grading {
    temperature: 6500
    contrast: 1.1
    saturation: 1.2
    lift: [0.0, 0.0, 0.05]
  }
  vignette {
    intensity: 0.3
    smoothness: 0.5
  }
  anti_aliasing {
    mode: "TAA"
    sharpness: 0.5
  }
}

--------------------------------------------------------------------------------

(source_file
  (post_processing_block
    name: (string)
    (post_effect
      (property
        key: (identifier)
        value: (number))
      (property
        key: (identifier)
        value: (number))
      (property
        key: (identifier)
        value: (number))
      (property
        key: (identifier)
        value: (color)))
    (post_effect
      (property
        key: (identifier)
        value: (number))
      (property
        key: (identifier)
        value: (number))
      (property
        key: (identifier)
        value: (number)))
    (post_effect
      (property
        key: (identifier)
        value: (number))
      (property
        key: (identifier)
        value: (number))
      (property
        key: (identifier)
        value: (number))
      (property
        key: (identifier)
        value: (array
          (number)
          (number)
          (number))))
    (post_effect
      (property
        key: (identifier)
        value: (number))
      (property
        key: (identifier)
        value: (number)))
    (post_effect
      (property
        key: (identifier)
        value: (string))
      (property
        key: (identifier)
        value: (number)))))

================================================================================
Post-Processing with Fog and Volumetrics
================================================================================

post_fx "Atmospheric" {
  volumetric_fog {
    density: 0.02
    height_falloff: 0.5
    color: #aabbcc
    max_distance: 500
  }
  god_rays {
    intensity: 0.5
    weight: 0.6
    density: 0.3
  }
  film_grain {
    intensity: 0.1
    response: 0.8
  }
}

--------------------------------------------------------------------------------

(source_file
  (post_processing_block
    name: (string)
    (post_effect
      (property
        key: (identifier)
        value: (number))
      (property
        key: (identifier)
        value: (number))
      (property
        key: (identifier)
        value: (color))
      (property
        key: (identifier)
        value: (number)))
    (post_effect
      (property
        key: (identifier)
        value: (number))
      (property
        key: (identifier)
        value: (number))
      (property
        key: (identifier)
        value: (number)))
    (post_effect
      (property
        key: (identifier)
        value: (number))
      (property
        key: (identifier)
        value: (number)))))

================================================================================
Audio Source with Spatial Properties
================================================================================

audio_source "Waterfall" @spatial @hrtf {
  clip: "sounds/waterfall_loop.ogg"
  volume: 0.8
  pitch: 1.0
  spatial_blend: 1.0
  min_distance: 1
  max_distance: 50
  rolloff_mode: "logarithmic"
  loop: true
  play_on_awake: true
  doppler_level: 0.5
}

--------------------------------------------------------------------------------

(source_file
  (audio_source_block
    name: (string)
    (trait_list
      (trait_inline
        name: (identifier))
      (trait_inline
        name: (identifier)))
    (property
      key: (identifier)
      value: (string))
    (property
      key: (identifier)
      value: (number))
    (property
      key: (identifier)
      value: (number))
    (property
      key: (identifier)
      value: (number))
    (property
      key: (identifier)
      value: (number))
    (property
      key: (identifier)
      value: (number))
    (property
      key: (identifier)
      value: (string))
    (property
      key: (identifier)
      value: (boolean))
    (property
      key: (identifier)
      value: (boolean))
    (property
      key: (identifier)
      value: (number))))

================================================================================
Reverb Zone Audio Block
================================================================================

reverb_zone "CaveReverb" {
  preset: "cave"
  min_distance: 5
  max_distance: 30
  room: -1000
  room_hf: -500
  decay_time: 3.0
  reflections: -200
}

--------------------------------------------------------------------------------

(source_file
  (audio_source_block
    name: (string)
    (property
      key: (identifier)
      value: (string))
    (property
      key: (identifier)
      value: (number))
    (property
      key: (identifier)
      value: (number))
    (property
      key: (identifier)
      value: (unary_expression
        operand: (number)))
    (property
      key: (identifier)
      value: (unary_expression
        operand: (number)))
    (property
      key: (identifier)
      value: (number))
    (property
      key: (identifier)
      value: (unary_expression
        operand: (number)))))

================================================================================
Weather System with Layers
================================================================================

weather "Thunderstorm" @dynamic {
  intensity: 0.9
  transition_time: 5.0

  rain {
    intensity: 0.9
    drop_size: 0.03
    wind_influence: 0.7
    splash_effect: true
  }
